# tasklib

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrefly.toml
docs/: Makefile  README.md  changelog.md  contributing.md  design.md  dev-experience.md  faq.md  final-summary.md  index.md  mkdocs.yml  project-summary.md  spec.md  test-coverage.md  testing.md
docs/api/: configuration.md  core.md  exceptions.md  worker.md
docs/architecture/: worker-entrypoint-design.md
docs/examples/: simple.md  tasklib.yaml
docs/getting-started/: first-task.md  installation.md  quick-start.md
docs/guides/: error-handling.md  monitoring.md  task-definition.md  task-submission.md  testing.md  workers.md
docs/schema/: database.md  final-schema.md  migrations.md  task-states.md
examples/: README.md  __init__.py  example.yaml  monitor_example.py  simple.py  submit_example.py  tasks.py  test_tasks.py  worker.py
migrations/: 001_add_tasks_table.py  001_add_tasks_table.sql
src/dashboard/: Dockerfile  Makefile  README.md  __init__.py  app.py  docker-compose.yml  init.sql  models.py  pyproject.toml
src/tasklib/: __init__.py  cli.py  config.py  core.py  exceptions.py  worker.py
src/tasklib/cli/: __init__.py  init_cli.py  main.py  submit_cli.py  worker_cli.py
src/tasklib/db/: __init__.py  migrations.py  models.py
src/tests/: conftest.py  test_core.py  test_integration.py
tasks_api/: Makefile  app.py  models.py
tests/: __init__.py  test_core.py  test_integration.py
